--- a/error.html
+++ b/error.html
@@ -27,6 +27,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#fff">
 
+
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -84,7 +85,7 @@
 							<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1373</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1417</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=kSKPtj3zD3YAX__0AsQ&oh=02a97f7329d7afe9a554c9794f66730f&oe=5ED0422C" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
@@ -93,16 +94,25 @@
 							<a href="./posts/./tim-yan---dushistyy-antivirus.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1175</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1177</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AjzgeVxxLeMAX__6lkf&oh=e266c41a16994b7a1c10e7e10f9883de&oe=5ED4DEA9" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
 							</div>
 							<div class="article-more__item-name">ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС</div>
 						</a>
+							<a href="./posts/./moya-istoriya.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1071</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dfFYp0sNKkAAX_xVa-R&oh=d32812084766562ea968acae87bc9c5d&oe=5ED47EF9" alt="МОЯ ИСТОРИЯ">
+							</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ</div>
+						</a>
 							<a href="./posts/./samyy-tselebnyy-produkt.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1036</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1038</span>
 								</div>
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=SsC5GBTD2lYAX9lebJe&oh=c5e005ad5e5eefa8c8087fecbfc0fd5f&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 							</div>
@@ -111,47 +121,38 @@
 							<a href="./posts/./moya-istoriyaxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>920</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1013</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=DYA0pRVuU5kAX-gg2CX&oh=3196136dc13d2a9414c7f00d04617640&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=H3TZpwrufwcAX-iQTv3&oh=d202c05e8e5aca82d4c330cc7556c183&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ❤️🌱</div>
 						</a>
 							<a href="./posts/./rostki-lyutserny-xxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>720</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>721</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=HL0JfW-tCa8AX_WAogs&oh=97b9afe9253dadbdb4e4617a242bb1e5&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=aWO90Mo72kEAX9-k873&oh=ab93b40a232592b29be83024b7b84fee&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 							</div>
 							<div class="article-more__item-name">РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻</div>
 						</a>
 							<a href="./posts/./o-fenkhele-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>675</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>679</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=nfAkdZQFGSUAX_-fWRe&oh=d1ccb3de48e6404c1cb7ea2a27cbfe45&oe=5EBFA785" alt="О ФЕНХЕЛЕ 🌱👍">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=-Hh0GpscsIUAX9R5HTr&oh=453c9be2bdfe6ce585f2ead4dc1ed459&oe=5EBFA785" alt="О ФЕНХЕЛЕ 🌱👍">
 							</div>
 							<div class="article-more__item-name">О ФЕНХЕЛЕ 🌱👍</div>
 						</a>
 							<a href="./posts/./vodaxchay-s-tim-yanom.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>673</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>674</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=nytvPJzqoDUAX8X1EUb&oh=5c4bffb4db00f6b53f668f7f2e51e31d&oe=5ECC561E" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
 							</div>
 							<div class="article-more__item-name">ВОДА/ЧАЙ С ТИМЬЯНОМ.</div>
-						</a>
-							<a href="./posts/./zachem-est--zelen--redisa.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>646</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=_MqAvwBOJGwAX_3v-Lj&oh=d4696fb6c981702350d1ad3a8dbdfa08&oe=5EB76F8A" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
-							</div>
-							<div class="article-more__item-name">ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?</div>
 						</a>
 						</div>
 				</div>
