--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="энтониуильям anishapo личное translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик">
-    <meta name="keywords" content="энтониуильям anishapo личное translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик" />
+    <meta name="description" content="anishapo личное энтониуильям translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик">
+    <meta name="keywords" content="anishapo личное энтониуильям translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="энтониуильям anishapo личное translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик" />
+    <meta property="og:description" content="anishapo личное энтониуильям translate healingfood смузи детокс medicalmedium russia тенерифе tenerife зожбалдеж яштокролик" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -62,7 +62,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=H9ZLfHRP-JkAX8oKHmM&oh=ab3d1cebbc2efa465243c32411d46669&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=L3nq7i6bfscAX-yV6DV&oh=30e48b8412dff6d57cc47b515e55297a&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -82,18 +82,18 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="энтониуильям">
-									<a href="./tags/./entoniuil-yam.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
-										<div class="stories__slide-txt" style="">энтониуильям</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo личное">
 									<a href="./tags/./anishapo-lichnoe.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-lichnoe.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo личное</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="энтониуильям">
+									<a href="./tags/./entoniuil-yam.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/entoniuil-yam.png);"></div>
+										<div class="stories__slide-txt" style="">энтониуильям</div>
 									</a>
 								</div>
 							</div>
@@ -138,10 +138,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="medicalmedium 101">
-									<a href="./tags/./medicalmedium-101.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-101.png);"></div>
-										<div class="stories__slide-txt" style="">medicalmedium 101</div>
+								<div class="stories__slide" title="ноэтонеточно">
+									<a href="./tags/./noetonetochno.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/noetonetochno.png);"></div>
+										<div class="stories__slide-txt" style="">ноэтонеточно</div>
 									</a>
 								</div>
 							</div>
@@ -234,6 +234,14 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="medicalmedium 101">
+									<a href="./tags/./medicalmedium-101.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/medicalmedium-101.png);"></div>
+										<div class="stories__slide-txt" style="">medicalmedium 101</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="healthylifestlye">
 									<a href="./tags/./healthylifestlye.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/healthylifestlye.png);"></div>
@@ -293,57 +301,67 @@
 								<a href="./moya-istoriyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1417</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1478</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82958299_179337959950513_1325142528092314413_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=kSKPtj3zD3YAX__0AsQ&oh=02a97f7329d7afe9a554c9794f66730f&oe=5ED0422C" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./tim-yan---dushistyy-antivirus.html" class="article-more__item">
+								<a href="./moya-istoriya-xxxx-2.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1177</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1232</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79016788_454957838519446_4630486079322138810_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AjzgeVxxLeMAX__6lkf&oh=e266c41a16994b7a1c10e7e10f9883de&oe=5ED4DEA9" alt="ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dpAazgOKyCsAX9CPlR4&oh=d02dc1c2216f679770e83b9cd944930b&oe=5ED47EF9" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
-">ТИМЬЯН - ДУШИСТЫЙ АНТИВИРУС</div>
-								</a>
-								<a href="./moya-istoriya.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1071</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dfFYp0sNKkAAX_xVa-R&oh=d32812084766562ea968acae87bc9c5d&oe=5ED47EF9" alt="МОЯ ИСТОРИЯ">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ</div>
-								</a>
-								<a href="./samyy-tselebnyy-produkt.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1038</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=SsC5GBTD2lYAX9lebJe&oh=c5e005ad5e5eefa8c8087fecbfc0fd5f&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
-									</div>
-									<div class="article-more__item-name" style="
-">САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ</div>
+">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
 								<a href="./moya-istoriyaxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1013</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1083</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82222585_471751380157287_2907672014600850675_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=H3TZpwrufwcAX-iQTv3&oh=d202c05e8e5aca82d4c330cc7556c183&oe=5ECA5540" alt="МОЯ ИСТОРИЯ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ❤️🌱</div>
 								</a>
+								<a href="./samyy-tselebnyy-produkt.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1050</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=4iHbWlK6d-cAX_8HOMH&oh=48daa880784ecc654c787a8b5c5b16a0&oe=5EC1E22A" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
+									</div>
+									<div class="article-more__item-name" style="
+">САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ</div>
+								</a>
+								<a href="./moya-istoriya-xxxx-1.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1047</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=d-oYodYCCXcAX__2L6q&oh=85e7dd59842e7ff873423c743d2bf4b7&oe=5ECFC8BA" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
+								<a href="./moya-istoriya-xxxx.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>796</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=5iXBWM_ruTYAX9Gg-aQ&oh=2970da67dc92651a1dc5365fd8c6d32d&oe=5ECEDF2B" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
 								<a href="./rostki-lyutserny-xxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>721</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>727</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/79027608_1011166102593584_5069965133421923406_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=aWO90Mo72kEAX9-k873&oh=ab93b40a232592b29be83024b7b84fee&oe=5EBA8F56" alt="РОСТКИ ЛЮЦЕРНЫ 🔥💪🏻">
 									</div>
@@ -353,22 +371,12 @@
 								<a href="./o-fenkhele-xxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>679</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>686</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83654188_2654364714649659_800838728339838733_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=-Hh0GpscsIUAX9R5HTr&oh=453c9be2bdfe6ce585f2ead4dc1ed459&oe=5EBFA785" alt="О ФЕНХЕЛЕ 🌱👍">
 									</div>
 									<div class="article-more__item-name" style="
 ">О ФЕНХЕЛЕ 🌱👍</div>
-								</a>
-								<a href="./vodaxchay-s-tim-yanom.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>674</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80778561_1324490884377842_6540309576461882657_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=nytvPJzqoDUAX8X1EUb&oh=5c4bffb4db00f6b53f668f7f2e51e31d&oe=5ECC561E" alt="ВОДА/ЧАЙ С ТИМЬЯНОМ.">
-									</div>
-									<div class="article-more__item-name" style="
-">ВОДА/ЧАЙ С ТИМЬЯНОМ.</div>
 								</a>
 							</div>
 						</div>
