--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=H9ZLfHRP-JkAX8oKHmM&oh=ab3d1cebbc2efa465243c32411d46669&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=L3nq7i6bfscAX-yV6DV&oh=30e48b8412dff6d57cc47b515e55297a&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,29 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriya" type="checkbox" />
+							<input id="moya-istoriya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dfFYp0sNKkAAX_xVa-R&oh=d32812084766562ea968acae87bc9c5d&oe=5ED47EF9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83443243_587623825122556_3780724092969003713_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=5iXBWM_ruTYAX9Gg-aQ&oh=2970da67dc92651a1dc5365fd8c6d32d&oe=5ECEDF2B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="moya-istoriya-xxxx-1" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83117044_517051265614152_7828751543441544839_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=d-oYodYCCXcAX__2L6q&oh=85e7dd59842e7ff873423c743d2bf4b7&oe=5ECFC8BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="moya-istoriya-xxxx-2" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82155166_602925233615455_5357142775244098314_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=dpAazgOKyCsAX9CPlR4&oh=d02dc1c2216f679770e83b9cd944930b&oe=5ED47EF9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="samyy-tselebnyy-produkt" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=SsC5GBTD2lYAX9lebJe&oh=c5e005ad5e5eefa8c8087fecbfc0fd5f&oe=5EC1E22A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80765240_402420937216712_951252990496981068_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=4iHbWlK6d-cAX_8HOMH&oh=48daa880784ecc654c787a8b5c5b16a0&oe=5EC1E22A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САМЫЙ ЦЕЛЕБНЫЙ ПРОДУКТ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zachem-est--zelen--redisa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=_MqAvwBOJGwAX_3v-Lj&oh=d4696fb6c981702350d1ad3a8dbdfa08&oe=5EB76F8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79955867_1787732994693676_2941568632325707798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=J6DZErx_R3EAX_nNbWW&oh=0bff803d8361e1818a114281507defc4&oe=5EB76F8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАЧЕМ ЕСТЬ ЗЕЛЕНЬ РЕДИСА?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="krasivoe-chislo-2020" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81031252_196979424678428_6745793589002918615_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=axaIE54rBzkAX8bJEtD&oh=b2c8bc6dd98d779778b585846589b429&oe=5ED6363E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Красивое число 2020.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81031252_196979424678428_6745793589002918615_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=H8eHOS_pcFcAX8GvB30&oh=a4ff6a10078c2f092d636a2ee6cd2ca0&oe=5ED6363E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Красивое число 2020.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="volny-na-plyazhexxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lA9ysfTa7YsAX-Kpy1v&oh=60c8cc06b5292b9edbc2a04dac0f4f20&oe=5E303612" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79922074_503251936979251_572972979792310538_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lA9ysfTa7YsAX-Kpy1v&oh=e8db32ef9f0eb4d1853479c39d21af73&oe=5E323052" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Волны на пляже 🌊">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,27 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="fokus-v-moem-pitanii" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80331999_187628665750969_2836041907825409027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=MN2Q3Z24no0AX92AQeH&oh=dcc84cd1a55e3c4cca9f6525d959ae6b&oe=5EB6A381" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФОКУС В МОЕМ ПИТАНИИ">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="retsept-chaya-iz-khurmy-dlya-lecheniya" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77110458_588200205080677_5107032566509865313_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=XhMveTrWBfwAX-0U8zA&oh=6a2430e602574ef74a02e0cbd8e83845&oe=5ED627E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ ЧАЯ ИЗ ХУРМЫ ДЛЯ ЛЕЧЕНИЯ">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="chto-zhe-ty-esh-" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80715239_180566376469424_5263644847650065203_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=FUugHDWweg0AX-S_oRt&oh=86a7490027c09bce7c378c749f0e891e&oe=5EC0E894" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ ТЫ ЕШЬ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80331999_187628665750969_2836041907825409027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=cAhRe5ZVJgwAX9UltSv&oh=d558a6a72cf4e6d48546e046c67d73dc&oe=5EB6A381" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФОКУС В МОЕМ ПИТАНИИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
